engine: name the drive unit -- a Step record for the eight drive-family methods
The (tx, def, inst, token, node, work, now) tuple travelled through every
drive-family signature as loose parameters, six or seven per method. That
tuple is one thing: a token being advanced at its node during a drive pass.
Step names it, drive() constructs one per iteration, and the eight
park/spawn/join/end methods take it as their single argument.

Method bodies are unchanged below a two-line unpack, so the diff is
signatures plus the switch -- reviewable as the mechanical move it is. The
switch now reads as the one-arg dispatch it always wanted to be, which is
the seam a per-NodeKind behaviour extraction would use next.

failToken and captureCompensation keep their explicit parameters: their
callers (housekeeping, the public fail path, complete()) sit outside a
drive pass, where def and the work deque do not exist, and a Step with
null fields would be worse than the tuple.

No behaviour change: 486 tests green on H2 and PostgreSQL 16, zero test
files touched.

Co-Authored-By: Claude Fable 5 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01DnQppwpkAaPoWrUfsoWpmR